-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
In o2iblnd, deadline is checked for txs on peer queue (ibp_tx_queue), but not set prior to adding the tx to the queue. This may cause the tx to be dropped unnecessarily with "Timed out tx for ... seconds ..." warning.
Make sure the deadline is set when adding tx to peer queue in order to avoid this problem.
- is related to
-
LU-18275 o2iblnd: unable to handle kernel NULL pointer dereference in kiblnd_cm_callback when receiving RDMA_CM_EVENT_UNREACHABLE
-
- Open
-